# tree-sitter

highlight/: Cargo.toml
highlight/src/: lib.rs
lib/: Cargo.toml
lib/binding_rust/: lib.rs
