[package]
name = "tree-sitter"
description = "Rust bindings to the Tree-sitter parsing library"
version = "0.20.9"
authors = ["Max Brunsfeld <maxbrunsfeld@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "binding_rust/README.md"
keywords = ["incremental", "parsing"]
categories = ["api-bindings", "parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter"

build = "binding_rust/build.rs"

include = [
  "/binding_rust/*",
  "/Cargo.toml",
  "/include/*",
  "/src/*.h",
  "/src/*.c",
  "/src/unicode/*",
]

[features]
serde = ["dep:serde", "serde_regex"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
lazy_static = { version = "1.2.0", optional = true }
serde_regex = { version = "1.1", optional = true }
regex = "1"

[build-dependencies]
cc = "^1.0.58"

[lib]
path = "binding_rust/lib.rs"
